--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <p>Sell</p>
 
             </div>
-            <div>
+            <div class="elc">
                 <p>shop deals in Elecronic</p>
             </div>
 
@@ -133,7 +133,26 @@
 
         <footer>
             <div class="foot-panel1">
-                back to Top
+                <div class="info">
+                <div class="firstbox">
+                    <h2>Get to Know Us</h2>
+                <ul>
+                    <li>About Amazon</li>
+                    <li>Careers</li>
+                    <li>Press Releases</li>
+                    <li>Amazon Science</li>    
+                </ul>
+                </div>
+                <div class="secondbox">
+                    <h2>Connect with Us</h2>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                    <li>linkedin</li>    
+                </ul>
+                </div>
+            </div>
             </div>
         </footer>
 
