--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
     <div class="hero-section">
         <div class="hero-msg">
-            <p>this is a amazon web side and you visite know. A very easily shop know </p>
+            <p>This is a Amazon Clone website.<span>shop know </span></p>
         </div>
     </div>
     <div class="shop-section">
